compiler/lume_parse/src/snapshots/lume_parse__tests__namespace_snapshots@path_2.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"namespace std::io\")"
---
SOURCE_FILE@0..16
  NAMESPACE@0..16
    NAMESPACE_KW@0..9 "namespace"
    IDENT@9..12 "std"
    PATH_SEP@12..14 "::"
    IDENT@14..16 "io"
