compiler/lume_parse/src/snapshots/lume_parse__tests__namespace_snapshots@path_casing.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"namespace System::IO\")"
---
SOURCE_FILE@0..20
  NAMESPACE@0..20
    NAMESPACE_KW@0..9 "namespace"
    WHITESPACE@9..10 " "
    IMPORT_PATH@10..20
      NAME@10..16
        IDENT@10..16 "System"
      PATH_SEP@16..18 "::"
      NAME@18..20
        IDENT@18..20 "IO"
