compiler/lume_parse/src/snapshots/lume_parse__tests__operator_snapshots@divide.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"a / b;\")"
---
SOURCE_FILE@0..6
  EXPR_STMT@0..6
    BIN_EXPR@0..5
      VARIABLE_EXPR@0..1
        NAME@0..1
          IDENT@0..1 "a"
      WHITESPACE@1..2 " "
      DIV@2..3 "/"
      WHITESPACE@3..4 " "
      VARIABLE_EXPR@4..5
        NAME@4..5
          IDENT@4..5 "b"
    SEMICOLON@5..6 ";"
