compiler/lume_parse/src/snapshots/lume_parse__tests__operator_snapshots@equal.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"a == b;\")"
---
SOURCE_FILE@0..5
  EXPR_STMT@0..5
    BIN_EXPR@0..4
      VARIABLE_EXPR@0..1
        IDENT@0..1 "a"
      EQUAL@1..3 "=="
      VARIABLE_EXPR@3..4
        IDENT@3..4 "b"
    SEMICOLON@4..5 ";"
