compiler/lume_parse/src/snapshots/lume_parse__tests__operator_snapshots@greater.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"a > b;\")"
---
SOURCE_FILE@0..4
  EXPR_STMT@0..4
    BIN_EXPR@0..3
      VARIABLE_EXPR@0..1
        IDENT@0..1 "a"
      GREATER@1..2 ">"
      VARIABLE_EXPR@2..3
        IDENT@2..3 "b"
    SEMICOLON@3..4 ";"
