compiler/lume_parse/src/snapshots/lume_parse__tests__operator_snapshots@increment.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"a++;\")"
---
SOURCE_FILE@0..4
  EXPR_STMT@0..4
    POSTFIX_EXPR@0..3
      VARIABLE_EXPR@0..1
        NAME@0..1
          IDENT@0..1 "a"
      INCREMENT@1..3 "++"
    SEMICOLON@3..4 ";"
